New Crowdin updates (#600)
* New translations strings.xml (Arabic)

* New translations strings.xml (Turkish)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Afrikaans)

* New translations strings.xml (Belarusian)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Finnish)

* New translations strings.xml (Irish)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Japanese)

* New translations strings.xml (Korean)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Norwegian)

* New translations strings.xml (Punjabi)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Serbian (Cyrillic))

* New translations strings.xml (Swedish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (English)

* New translations strings.xml (Vietnamese)

* New translations strings.xml (Galician)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Indonesian)

* New translations strings.xml (Bengali)

* New translations strings.xml (Croatian)

* New translations strings.xml (Norwegian Nynorsk)

* New translations strings.xml (Hindi)

* New translations strings.xml (Odia)

* New translations strings.xml (Nepali)

* New translations strings.xml (Russian, Belarus)

* New translations strings.xml (Chinese Traditiona

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -288,7 +288,7 @@
     <string name="date_header_summary">Définissez vos propres formats de date</string>
     <string name="launch_on_library">Démarrer sur la librairie</string>
     <string name="categories">Catégories</string>
-    <string name="classified_media">%1$s classified media</string>
+    <string name="classified_media">%1$s médias classés</string>
     <string name="scan_for_new_categories">Rechercher de nouvelles catégories</string>
     <string name="scanning_media">Analyse des médias...</string>
     <string name="date_header_title">Date en en-tête</string>
@@ -303,6 +303,25 @@
     <string name="auto_play_video_summary">Lecture automatique de la vidéo à la visualisation</string>
     <string name="shared_elements">Animer les éléments médias</string>
     <string name="shared_elements_summary">Animer le clic/retour d\'un média à l\'aide des transitions d\'éléments partagés</string>
+    <string name="type_stylus">Stylet</string>
+    <string name="type_highlighter">Surligneur</string>
+    <string name="type_marker">Marqueur</string>
+    <string name="type_erase">Gomme</string>
+    <string name="crop">Recadrer</string>
+    <string name="adjust">Ajuster</string>
+    <string name="filters">Filtres</string>
+    <string name="markup">Marquage</string>
+    <string name="type_size">Taille</string>
+    <string name="encrypting_media">Chiffrement des médias…</string>
+    <string name="decrypt_vault">Déchiffrer le coffre</string>
+    <string name="restore_vault_summary">L\'espace de stockage actuel et son contenu seront déchiffrés et restaurés.\nCette action rendra votre contenu à nouveau accessible dans la Galerie.</string>
+    <string name="restore_vault_title">Confirmer le déchiffrement ?</string>
+    <string name="yes">Oui</string>
+    <string name="vault_deletion_title">Confirmer la suppression ?</string>
+    <string name="vault_deletion_summary">Le coffre actuel et son contenu seront définitivement supprimés.\nCette action ne peut pas être annulée.</string>
+    <string name="create_new_vault_title">Créer un nouveau coffre ?</string>
+    <string name="create_new_vault_summary">L\'accès au coffre se fera par le biais des mesures de sécurité de votre téléphone (mot de passe ou données biométriques).\n\nLa clé de chiffrement est accessible à l\'intérieur du coffre et sera utilisée pour restaurer les coffres.</string>
+    <string name="select_a_vault">Sélectionner un coffre</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
