--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -197,7 +197,7 @@
     <string name="individual_album_selection">Individual Album Selection</string>
     <string name="wildcard_creator">Wildcard Creator</string>
     <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="wildcard_summary_first">ワイルドカード: %1$s\n一致したアルバム: %2$s</string>
     <string name="matched_albums">"一致したアルバム: %1$s"</string>
     <string name="go_back">戻る</string>
     <string name="continue_string">続行</string>
@@ -208,13 +208,13 @@
     <string name="setup_label_title">非表示にしたアルバム</string>
     <string name="setup_lavel_subtitle">作成</string>
     <string name="setup_location_title">オプション</string>
-    <string name="setup_location_subtitle">Where and who’s ignored</string>
-    <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_subtitle">どこの誰を無視しますか</string>
+    <string name="setup_location_location_title">どこを無視しますか</string>
+    <string name="setup_location_location_subtitle">アルバムとそのコンテンツは、場所の設定によって非表示になります。</string>
     <string name="setup_location_options_albums">アルバム</string>
     <string name="setup_location_options_timeline">タイムライン</string>
     <string name="setup_location_options_both">両方</string>
-    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_type_title">誰を無視しますか</string>
     <string name="setup_location_type_subtitle">単一のアルバムを選択することも、複数のアルバムにマッチするRegexパターンを作成することもできます。</string>
     <string name="setup_location_types_selection">選択</string>
     <string name="setup_location_types_regex">正規表現パターン</string>
@@ -225,20 +225,20 @@
     <string name="setup_type_regex_label">正規表現パターン</string>
     <string name="setup_type_regex_summary">正規表現のパターンマッチングを使用して、アルバムを自動的に無視します。\n\n続行する前に、パターンが有効でなければなりません。</string>
     <string name="setup_type_regex_title">正規表現パターン</string>
-    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
+    <string name="setup_type_regex_subtitle">選択パターンを作成する</string>
     <string name="setup_type_regex_example_title">サンプル</string>
-    <string name="setup_type_regex_example_first_title">Musicフォルダの下にあるアルバムを直接一致させてください：</string>
+    <string name="setup_type_regex_example_first_title">Musicフォルダの直下にあるすべてのアルバムにマッチする:</string>
     <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
-    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
+    <string name="setup_type_regex_example_second_title">Musicフォルダとそのサブフォルダにあるすべてのアルバムにマッチする:</string>
     <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
-    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
+    <string name="setup_type_regex_example_third_title">MusicフォルダのAlbum_で始まるすべてのアルバムにマッチする:</string>
     <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
     <string name="setup_type_regex_error">無効な正規表現パターンです</string>
-    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
-    <string name="setup_confirmation_title">確認のため再入力</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
+    <string name="setup_type_regex_error_second">このワイルドカードは既に使用されています</string>
+    <string name="setup_confirmation_title">確認</string>
+    <string name="setup_confirmation_subtitle">無視したオプションと一致した項目の概要</string>
+    <string name="setup_confirmation_where">どこを無視しますか</string>
+    <string name="setup_confirmation_who">誰を無視しますか</string>
     <string name="setup_confirmation_matched">一致したアルバム</string>
     <string name="albums_and_timeline">アルバムとタイムラインの両方</string>
     <string name="created">作成済み</string>
@@ -262,13 +262,13 @@
     <string name="update_file_name">ファイル名を更新する</string>
     <string name="support_the_project">プロジェクトをサポートする</string>
     <string name="click_to_copy">クリックしてコピー</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
+    <string name="take_audio_focus_title">オーディオフォーカス</string>
     <string name="take_audio_focus_summary">これを有効にすると、メディア再生時にオーディオフォーカスがかかります。バックグラウンドで再生中のメディアは、ビデオ再生中に一時停止します。(アプリの再起動が必要です)</string>
     <string name="full_brightness_view_title">表示時の明るさを最大にする</string>
     <string name="full_brightness_view_summary">画像やビデオを見るときは、画面の明るさを最大にする</string>
     <string name="auto_hide_on_video_play">ビデオ再生時にUIを隠す</string>
     <string name="auto_hide_on_video_play_summary">動画再生時、2秒後にUIを隠す</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="up_to_date">最新</string>
     <string name="delete_location">ロケーションデータの削除</string>
     <string name="delete_metadata">メタデータを削除</string>
     <string name="categorise_your_media">メディアを分類する</string>
@@ -279,30 +279,49 @@
     <string name="ai_category">スマートな機能</string>
     <string name="no_classification">画像の分類を無効化</string>
     <string name="no_classification_summary">これをオンにすると、画像の分類や管理に関するUIがすべて削除されます。分類された画像のデータベースは削除されません。</string>
-    <string name="classification_unwanted">I don\'t want this</string>
-    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="classification_unwanted">必要ありません</string>
+    <string name="classification_unwanted_summary">必要ないので、非表示にしてください。\n(設定から再度有効にできます)</string>
     <string name="restore">復元</string>
     <string name="encrypted">暗号化されています</string>
     <string name="date_format_settings">日付の形式</string>
     <string name="date_header">日付の形式</string>
     <string name="date_header_summary">独自の日付形式を設定</string>
-    <string name="launch_on_library">Launch on Library</string>
-    <string name="categories">Categories</string>
-    <string name="classified_media">%1$s classified media</string>
-    <string name="scan_for_new_categories">Scan for new categories</string>
-    <string name="scanning_media">Scanning media...</string>
-    <string name="date_header_title">Date Header</string>
-    <string name="media_view">Media View</string>
-    <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
-    <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="launch_on_library">ライブラリで起動</string>
+    <string name="categories">カテゴリー</string>
+    <string name="classified_media">%1$s 分類されたメディア</string>
+    <string name="scan_for_new_categories">新しいカテゴリをスキャン</string>
+    <string name="scanning_media">メディアをスキャン中...</string>
+    <string name="date_header_title">日付ヘッダー</string>
+    <string name="media_view">メディアビュー</string>
+    <string name="exif_date">Exifデータの日付</string>
+    <string name="media_info">メディア情報</string>
+    <string name="weekly_date">週表示</string>
+    <string name="media_grid">メディアグリッド</string>
+    <string name="classic_date">基本表示</string>
+    <string name="extended_date">拡張表示</string>
+    <string name="auto_play_video">ビデオの自動再生</string>
+    <string name="auto_play_video_summary">メディアの表示中はビデオを自動再生する</string>
+    <string name="shared_elements">メディアのアニメーション</string>
+    <string name="shared_elements_summary">メディアアイテムのタップ/戻り時に共有要素遷移を使用する</string>
+    <string name="type_stylus">ペン</string>
+    <string name="type_highlighter">蛍光ペン</string>
+    <string name="type_marker">マーカー</string>
+    <string name="type_erase">消しゴム</string>
+    <string name="crop">切り抜き</string>
+    <string name="adjust">調整</string>
+    <string name="filters">フィルター</string>
+    <string name="markup">マークアップ</string>
+    <string name="type_size">サイズ</string>
+    <string name="encrypting_media">メディアの暗号化中...</string>
+    <string name="decrypt_vault">保管庫の復号</string>
+    <string name="restore_vault_summary">現在のデータ保管庫とそのコンテンツは復号され、復元されます。\nこの操作により、ギャラリーのコンテンツに再びアクセスできるようになります。</string>
+    <string name="restore_vault_title">保管庫を復号しますか？</string>
+    <string name="yes">はい</string>
+    <string name="vault_deletion_title">保管庫を削除しますか？</string>
+    <string name="vault_deletion_summary">現在の保管庫と保管庫に含まれるコンテンツは完全に削除されます。\nこの操作は取り消せません。</string>
+    <string name="create_new_vault_title">新しい保管庫を作成しますか？</string>
+    <string name="create_new_vault_summary">保管庫には、携帯電話のセキュリティ対策(パスワードまたは生体認証) を使ってアクセスします。\n\n暗号化キーは保管庫内でアクセスすることができ、保管庫を復元するために使用されます。</string>
+    <string name="select_a_vault">保管庫を選択</string>
     <plurals name="item_count">
         <item quantity="other">%s アイテム</item>
     </plurals>
