--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -52,7 +52,7 @@
     <string name="nav_timeline">타임라인</string>
     <string name="location_cd">미디어 위치</string>
     <string name="location_map_cd">위치 지도</string>
-    <string name="app_dev">by %s</string>
+    <string name="app_dev">%s 제작</string>
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">기부하기</string>
     <string name="github">Github</string>
@@ -107,10 +107,10 @@
     <string name="location_chip">위치: %s</string>
     <string name="media_details">세부 정보</string>
     <string name="album_card_size">앨범 카드 크기</string>
-    <string name="edit_metadata">Edit Metadata</string>
+    <string name="edit_metadata">메타데이터 편집</string>
     <string name="dialog_to_trash">Moving to Trash</string>
     <string name="dialog_delete">Deleting Permanently</string>
-    <string name="s_items">%1$s items</string>
+    <string name="s_items">%1$s개 항목</string>
     <string name="trashing_items">Trashing %1$s items..</string>
     <string name="deleting_items">Deleting %1$s items...</string>
     <string name="long_press_to_remove">Long press to remove</string>
@@ -121,17 +121,17 @@
     <string name="error_toast">An error occurred!</string>
     <string name="beta">Beta</string>
     <string name="remove_metadata">Remove Metadata</string>
-    <string name="remove_location">Remove Location</string>
-    <string name="description">Description</string>
-    <string name="move_to_another_album">Move to another album</string>
+    <string name="remove_location">위치 제거</string>
+    <string name="description">설명</string>
+    <string name="move_to_another_album">다른 앨범으로 이동</string>
     <string name="move">Move</string>
     <string name="some_permissions_are_not_granted">Some permissions are not granted!</string>
     <string name="get_started">Get Started</string>
     <string name="welcome">Welcome</string>
     <string name="setup_summary">In order to access your media, it is required to grant the following permissions:</string>
-    <string name="required">Required</string>
-    <string name="optional">Optional</string>
-    <string name="permission_manage_media_title">Manage Media</string>
+    <string name="required">필수</string>
+    <string name="optional">선택</string>
+    <string name="permission_manage_media_title">미디어 관리</string>
     <string name="permission_manage_media_summary">"Automatically grants system confirmation dialogs when you request several changes to your media (Toggle Favorite, Manage Trash, Edit metadata etc)"</string>
     <string name="read_media_images">Read Media Images</string>
     <string name="read_media_images_summary">Allows the app to show your images</string>
@@ -149,11 +149,11 @@
     <string name="hide_timeline_for_album_summary">Hides date headers when opening an album</string>
     <string name="allow_vibrations">Allow vibrations</string>
     <string name="allow_vibrations_summary">Allow sending feedback as vibrations while performing some actions or gestures</string>
-    <string name="album_name">Album Name</string>
-    <string name="create_new_album">Create new album</string>
-    <string name="copy">Copy</string>
+    <string name="album_name">앨범 이름</string>
+    <string name="create_new_album">새 앨범 만들기</string>
+    <string name="copy">복사</string>
     <string name="ignored_albums">Ignored Albums</string>
-    <string name="select_an_album">Select an album</string>
+    <string name="select_an_album">앨범 선택</string>
     <string name="blacklist_summary">Ignore albums from Gallery</string>
     <string name="add_to_ignored">Add to ignored albums</string>
     <string name="add_to_ignored_summary">Remove an album from showing inside the Gallery</string>
@@ -171,16 +171,16 @@
     <string name="launch_on_albums">Launch on Albums</string>
     <string name="launch_auto">Launch last screen when the app was closed</string>
     <string name="set_default_screen">Set default screen</string>
-    <string name="done">Done</string>
+    <string name="done">완료</string>
     <string name="toggle_audio_cd">Toggle audio</string>
-    <string name="auto">Auto</string>
-    <string name="change_playback_speed_cd">Change playback speed</string>
-    <string name="location_new_album">Location: Internal-Storage/%1$s</string>
-    <string name="permission_manage_files_title">Manage All Files</string>
+    <string name="auto">자동</string>
+    <string name="change_playback_speed_cd">재생 속도 변경</string>
+    <string name="location_new_album">위치: 내부 저장소/%1$s</string>
+    <string name="permission_manage_files_title">모든 파일 관리</string>
     <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card)"</string>
-    <string name="allow_to_manage_files">Allow to Manage All Files</string>
+    <string name="allow_to_manage_files">모든 파일 관리 허용</string>
     <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
+    <string name="tools">도구</string>
     <string name="library">Library</string>
     <string name="biometric_authentication">Biometric Authentication</string>
     <string name="unlock_your_vault">Unlock your Vault</string>
@@ -303,6 +303,25 @@
     <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
     <string name="shared_elements">Animate media items</string>
     <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Highlighter</string>
+    <string name="type_marker">Marker</string>
+    <string name="type_erase">Eraser</string>
+    <string name="crop">Crop</string>
+    <string name="adjust">Adjust</string>
+    <string name="filters">Filters</string>
+    <string name="markup">Markup</string>
+    <string name="type_size">Size</string>
+    <string name="encrypting_media">Encrypting media...</string>
+    <string name="decrypt_vault">Decrypt Vault</string>
+    <string name="restore_vault_summary">The current vault and its content will be decrypted and restored.\nThis action will make your content accessible again in the Gallery.</string>
+    <string name="restore_vault_title">Confirm Decryption?</string>
+    <string name="yes">Yes</string>
+    <string name="vault_deletion_title">Confirm Deletion?</string>
+    <string name="vault_deletion_summary">The current vault and its content will be deleted permanently.\nThis action cannot be undone.</string>
+    <string name="create_new_vault_title">Create new vault?</string>
+    <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="select_a_vault">Select a vault</string>
     <plurals name="item_count">
         <item quantity="other">%s개 항목</item>
     </plurals>
