--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -56,7 +56,7 @@
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">Wesprzyj</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Przycisk wsparcia</string>
+    <string name="donate_button_cd">Przycisk Wsparcia</string>
     <string name="github_button_cd">Przycisk Github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
@@ -91,7 +91,7 @@
     <string name="all">Wszystko</string>
     <string name="secure_mode_title">Tryb bezpieczny</string>
     <string name="secure_mode_summary">Ukryj podgląd aplikacji po jej zamknięciu</string>
-    <string name="rotate_screen_cd">Obróć ekran</string>
+    <string name="rotate_screen_cd">Obróć Ekran</string>
     <string name="size_dp">%1$sdp</string>
     <string name="change_album_size">Zmień rozmiar karty albumu</string>
     <string name="reset">Reset</string>
@@ -109,11 +109,11 @@
     <string name="album_card_size">Rozmiar karty albumu</string>
     <string name="edit_metadata">Edytuj metadane</string>
     <string name="dialog_to_trash">Przenoszenie do kosza</string>
-    <string name="dialog_delete">Usuwanie trwałe</string>
-    <string name="s_items">%1$s pozycje</string>
-    <string name="trashing_items">Usuwanie %1$s pozycji..</string>
-    <string name="deleting_items">Usuwanie %1$s pozycji...</string>
-    <string name="long_press_to_remove">Przytrzymaj aby usunąć</string>
+    <string name="dialog_delete">Trwa Trwałe Usuwanie</string>
+    <string name="s_items">%1$s pozycji</string>
+    <string name="trashing_items">Usuwanie %1$s elementów..</string>
+    <string name="deleting_items">Usuwanie %1$s elementów...</string>
+    <string name="long_press_to_remove">Przytrzymaj, aby usunąć</string>
     <string name="dialog_from_trash">Przywracanie z kosza</string>
     <string name="restoring_items">Przywracanie %1$s pozycji..</string>
     <string name="trash_incompatible_title">Niektórych pozycji nie można usunąć!</string>
@@ -287,22 +287,41 @@
     <string name="date_header">Formaty Dat</string>
     <string name="date_header_summary">Ustaw własne formaty dat</string>
     <string name="launch_on_library">Uruchom na bibliotece</string>
-    <string name="categories">Categories</string>
-    <string name="classified_media">%1$s classified media</string>
-    <string name="scan_for_new_categories">Scan for new categories</string>
-    <string name="scanning_media">Scanning media...</string>
+    <string name="categories">Kategorie</string>
+    <string name="classified_media">%1$s sklasyfikowanych multimediów</string>
+    <string name="scan_for_new_categories">Przeskanuj w poszukiwaniu nowych kategorii</string>
+    <string name="scanning_media">Skanowanie multimediów...</string>
     <string name="date_header_title">Date Header</string>
     <string name="media_view">Media View</string>
     <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
+    <string name="media_info">Informacje o Multimediach</string>
+    <string name="weekly_date">Data Tygodniowa</string>
+    <string name="media_grid">Siatka Multimediów</string>
+    <string name="classic_date">Data Klasyczna</string>
+    <string name="extended_date">Data Rozszerzona</string>
+    <string name="auto_play_video">Auto-Odtwarzanie Wideo</string>
+    <string name="auto_play_video_summary">Automatycznie odtwarzaj wideo podczas przeglądania multimediów</string>
+    <string name="shared_elements">Animuj pozycje multimedialne</string>
     <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Zakreślacz</string>
+    <string name="type_marker">Marker</string>
+    <string name="type_erase">Gumka</string>
+    <string name="crop">Przytnij</string>
+    <string name="adjust">Dopasuj</string>
+    <string name="filters">Filtry</string>
+    <string name="markup">Znacznik</string>
+    <string name="type_size">Rozmiar</string>
+    <string name="encrypting_media">Szyfrowanie multimediów...</string>
+    <string name="decrypt_vault">Odszyfruj Sejf</string>
+    <string name="restore_vault_summary">Obecny sejf i jego zawartość będzie odszyfrowana i odzyskana.\nTa akcja spowoduje, że twoje multimedia znowu będą dostępne poza aplikacją.</string>
+    <string name="restore_vault_title">Potwierdzić Odszyfrowywanie?</string>
+    <string name="yes">Tak</string>
+    <string name="vault_deletion_title">Potwierdzić Usunięcie?</string>
+    <string name="vault_deletion_summary">Ten sejf będzie trwale usunięty wraz z jego zawartością.\nTa akcja jest nieodwracalna.</string>
+    <string name="create_new_vault_title">Utworzyć nowy sejf?</string>
+    <string name="create_new_vault_summary">Do sejfu można się dostać używając zabezpieczeń telefonu (hasło lub biometria)\n\nKlucz szyfrujący można znaleźć wewnątrz sejfu i można go użyć, aby odzyskać dowolny sejf.</string>
+    <string name="select_a_vault">Wybierz sejf</string>
     <plurals name="item_count">
         <item quantity="one">%s pozycja</item>
         <item quantity="few">%s pozycji</item>
