--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -20,7 +20,7 @@
     <string name="no_media_cd">無可用媒體檔案</string>
     <string name="empty_trash_title">一塵不染</string>
     <string name="empty_trash_cd">已清空垃圾桶</string>
-    <string name="error_title">出現問題了  :(</string>
+    <string name="error_title">出現問題了 :(</string>
     <string name="error_cd">發生錯誤</string>
     <string name="copy_error">複製錯誤</string>
     <string name="trash_restore">還原</string>
@@ -37,8 +37,8 @@
     <string name="mb">MB</string>
     <string name="gb">GB</string>
     <string name="metadata">相關資訊</string>
-    <string name="select_all">選取全部</string>
-    <string name="unselect_all">撤銷全選</string>
+    <string name="select_all">全部選取</string>
+    <string name="unselect_all">全部取消選取</string>
     <string name="drop_down_cd">下拉選單</string>
     <string name="back_cd">返回</string>
     <string name="settings_title">設定</string>
@@ -72,7 +72,7 @@
     <string name="edit_cd">編輯</string>
     <string name="settings_theme_header">主題</string>
     <string name="settings_follow_system_theme_title">跟隨系統主題</string>
-    <string name="settings_dark_mode_title">使用暗黑模式</string>
+    <string name="settings_dark_mode_title">使用深色模式</string>
     <string name="selection_dialog_close_cd">關閉選取視窗</string>
     <string name="edit">編輯</string>
     <string name="trash_deletion_warning">刪除的照片和影片將在 30 天後清除。</string>
@@ -263,7 +263,7 @@
     <string name="support_the_project">支援該專案</string>
     <string name="click_to_copy">點選複製</string>
     <string name="take_audio_focus_title">取得音訊焦點</string>
-    <string name="take_audio_focus_summary">啟用此功能將在播放媒體時取得音訊焦點。 影片播放時，後台播放的任何媒體都會暫停。  （需要重新啟動應用程式）</string>
+    <string name="take_audio_focus_summary">啟用此功能將在播放媒體時取得音訊焦點。影片播放時，後台播放的任何媒體都會暫停。（需要重新啟動應用程式）</string>
     <string name="full_brightness_view_title">觀看時全亮度</string>
     <string name="full_brightness_view_summary">查看影像和影片時將螢幕亮度調至最大</string>
     <string name="auto_hide_on_video_play">在影片播放時隱藏 UI</string>
@@ -277,8 +277,8 @@
     <string name="delete_all_categories">刪除所有類別</string>
     <string name="delete_all_categories_summary">這將永久刪除迄今為止在您的媒體中找到的所有類別，此操作不可逆轉。 您必須重新掃描您的媒體才能將其重新分類。</string>
     <string name="ai_category">智慧功能</string>
-    <string name="no_classification">禁用影像分類</string>
-    <string name="no_classification_summary">啟用此功能將刪除任何有關影像分類或管理影像的 UI。 它不會刪除您的分類圖像資料庫</string>
+    <string name="no_classification">停用影像分類</string>
+    <string name="no_classification_summary">啟用此功能將刪除任何有關影像分類或管理影像的 UI。它不會刪除您的分類圖像資料庫</string>
     <string name="classification_unwanted">我不想要這個</string>
     <string name="classification_unwanted_summary">我不想要這個，請將它移除。\n（可以在設定中再次啟用）</string>
     <string name="restore">恢復</string>
@@ -292,17 +292,36 @@
     <string name="scan_for_new_categories">掃描新分類</string>
     <string name="scanning_media">掃描媒體中...</string>
     <string name="date_header_title">日期標題</string>
-    <string name="media_view">Media View</string>
-    <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
-    <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="media_view">媒體檢視</string>
+    <string name="exif_date">Exif 日期</string>
+    <string name="media_info">媒體資訊</string>
+    <string name="weekly_date">每週日期</string>
+    <string name="media_grid">媒體網格</string>
+    <string name="classic_date">經典日期</string>
+    <string name="extended_date">擴展日期</string>
+    <string name="auto_play_video">影片自動播放</string>
+    <string name="auto_play_video_summary">媒體檢視時自動播放影片</string>
+    <string name="shared_elements">媒體載入動畫</string>
+    <string name="shared_elements_summary">使用共享元素轉場動畫，為媒體項目的點擊/返回動作加入動畫效果。</string>
+    <string name="type_stylus">手寫筆</string>
+    <string name="type_highlighter">螢光筆</string>
+    <string name="type_marker">記號筆</string>
+    <string name="type_erase">橡皮</string>
+    <string name="crop">裁剪</string>
+    <string name="adjust">調整</string>
+    <string name="filters">濾鏡</string>
+    <string name="markup">標記</string>
+    <string name="type_size">尺寸</string>
+    <string name="encrypting_media">媒體加密中</string>
+    <string name="decrypt_vault">解密私密空間</string>
+    <string name="restore_vault_summary">目前私密空間及其內容將被解密並還原。\n此動作將使您的內容在相簿中再次可用。</string>
+    <string name="restore_vault_title">確認解密？</string>
+    <string name="yes">確認</string>
+    <string name="vault_deletion_title">確認刪除？</string>
+    <string name="vault_deletion_summary">目前的保險庫及其內容將永久刪除。\n此動作無法復原。</string>
+    <string name="create_new_vault_title">建立新私密空間？</string>
+    <string name="create_new_vault_summary">私密空間將透過您的手機安全措施（密碼或生物辨識）存取。\n\n加密金鑰可在私密空間內取得，並用於還原任何私密空間。</string>
+    <string name="select_a_vault">選擇私密空間</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
