--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -186,7 +186,7 @@
     <string name="unlock_your_vault">Odemkněte svůj trezor</string>
     <string name="add_media_to_vault_cd">Přidání médií do trezoru</string>
     <string name="vault_exists">Trezor %1$s (%2$s) existuje</string>
-    <string name="granted">Granted</string>
+    <string name="granted">Uděleno</string>
     <string name="new_vault">Nový trezor</string>
     <string name="delete_vault">Smazat trezor</string>
     <string name="unknown_vault">Neznámý trezor</string>
@@ -195,14 +195,14 @@
     <string name="no_ignored_albums">Žádná ignorovaná alba</string>
     <string name="setup_ignored_albums">Nastavení ignorovaných alb</string>
     <string name="individual_album_selection">Výběr jednotlivých alb</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
+    <string name="wildcard_creator">Tvůrce divokých karet</string>
+    <string name="wildcard_summary">Zástupný znak se použije pro porovnání názvů alb nebo cest k nim.\nDivokou kartu lze považovat za regexový vzor.</string>
+    <string name="wildcard_summary_first">Divoká karta: %1$s\nShodná alba: %2$s</string>
     <string name="matched_albums">"Odpovídající alba: %1$s"</string>
     <string name="go_back">Zpět</string>
     <string name="continue_string">Pokračovat</string>
     <string name="apply">Použít</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="setup_label_info">Vyberte, která alba nechcete vidět na hlavní časové ose, na kartě Alba nebo na obou.\n\nMůžete vybrat jednotlivá alba nebo vytvořit regularní výraz, který automaticky skryje všechna alba, která mu odpovídají.</string>
     <string name="setup_label_input">Název</string>
     <string name="setup_label_placeholder">Zadejte název</string>
     <string name="setup_label_title">Skrytá alba</string>
@@ -236,73 +236,92 @@
     <string name="setup_type_regex_error">Neplatný regulární výraz</string>
     <string name="setup_type_regex_error_second">Tento zástupný znak je již používán</string>
     <string name="setup_confirmation_title">Potvrdit</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
-    <string name="filter_type_date">Date</string>
-    <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
+    <string name="setup_confirmation_subtitle">Prohlédněte si možnosti ignorování a shod</string>
+    <string name="setup_confirmation_where">Kde by mělo být album ignorováno</string>
+    <string name="setup_confirmation_who">Kdo by měl být ignorován</string>
+    <string name="setup_confirmation_matched">Odpovídající alba</string>
+    <string name="albums_and_timeline">Alba i časová osa</string>
+    <string name="created">Vytvořeno</string>
+    <string name="filter_type_date">Datum</string>
+    <string name="filter_type_name">Název</string>
+    <string name="images_videos"><![CDATA[%1$s Obrázky a videa]]></string>
     <string name="auto_hide_searchbar">Skrýt vyhledávací lištu při posouvání</string>
     <string name="auto_hide_searchbar_summary">Automaticky skrýt vyhledávací lištu nebo horní lištu obrazovky při posouvání</string>
     <string name="auto_hide_navigationbar">Skrýt navigační lištu při posouvání</string>
     <string name="auto_hide_navigationbar_summary">Automaticky skrýt navigační lištu při posouvání</string>
     <string name="navigation">Navigace</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
-    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
-    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
+    <string name="vault_setup_title">Nastavit trezor</string>
+    <string name="vault_setup_subtitle"><![CDATA[Zašifrujte vaše nejosobnější fotky a videa]]></string>
+    <string name="vault_setup_name">Název rezoru</string>
+    <string name="vault_setup_security_error">Před nastavením trezoru nastavte bezpečnostní opatření telefonu.</string>
+    <string name="vault_setup_summary">Do trezoru se dostanete pomocí bezpečnostních opatření telefonu (heslo nebo biometrické údaje)\n\nŠifrovací klíč je přístupný uvnitř trezoru a slouží k obnovení všech trezorů.</string>
+    <string name="vault_setup_summary2">Do trezoru se dostanete pomocí bezpečnostních opatření telefonu (heslo nebo biometrické údaje)\n\nObsah trezoru je šifrován pomocí šifrovacího algoritmu AES256.\nŠifrovací klíč není přístupný uvnitř trezoru a nebude možné trezor přenést.</string>
+    <string name="vault_already_exists">Trezor \"%1$s\" již existuje</string>
+    <string name="ignored">Ignorováno</string>
+    <string name="location">Umístění</string>
+    <string name="update_file_name">Aktualizovat název souboru</string>
+    <string name="support_the_project">Podpořit tento projekt</string>
+    <string name="click_to_copy">Kliknutím zkopírujete</string>
     <string name="take_audio_focus_title">Výhradní zvukový výstup</string>
     <string name="take_audio_focus_summary">Při přehrávání videa pozastavit média přehrávaná na pozadí. (restartuje aplikaci)</string>
     <string name="full_brightness_view_title">Plný jas při prohlížení</string>
     <string name="full_brightness_view_summary">Zvýšit jas na maximum při prohlížení obrázků a videa</string>
     <string name="auto_hide_on_video_play">Skrýt UI při přehrávání videa</string>
     <string name="auto_hide_on_video_play_summary">Skrýt uživatelské rozhraní po 2 sekundách přehrávání videa</string>
-    <string name="up_to_date">Up-to-date</string>
-    <string name="delete_location">Delete Location</string>
-    <string name="delete_metadata">Delete Metadata</string>
-    <string name="categorise_your_media">Categorise your media</string>
-    <string name="disclaimer">Disclaimer</string>
-    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
-    <string name="delete_all_categories">Delete all categories</string>
-    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="up_to_date">Aktuální</string>
+    <string name="delete_location">Smazat umístění</string>
+    <string name="delete_metadata">Odstranit metadata</string>
+    <string name="categorise_your_media">Kategorizovat média</string>
+    <string name="disclaimer">Prohlášení</string>
+    <string name="disclaimer_classification">Vaše média nejsou nahrávána na žádný server, veškerá klasifikace se provádí lokálně v zařízení pomocí TensorFlow-Lite s předtrénovaným modelem dostupným v aplikaci.</string>
+    <string name="delete_all_categories">Odstranit všechny kategorie</string>
+    <string name="delete_all_categories_summary">Tím se trvale odstraní všechny dosud nalezené kategorie v médiích, tato akce je nevratná. Média budete muset znovu prohledat a znovu je zařadit.</string>
     <string name="ai_category">Chytré funkce</string>
     <string name="no_classification">Zakázat klasifikaci obrázků</string>
-    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
-    <string name="classification_unwanted">I don\'t want this</string>
-    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
-    <string name="restore">Restore</string>
-    <string name="encrypted">Encrypted</string>
+    <string name="no_classification_summary">Zapnutím této funkce se odstraní veškeré uživatelské rozhraní týkající se klasifikace obrázků nebo jejich správy. NEvymaže databázi klasifikovaných obrázků.</string>
+    <string name="classification_unwanted">Tohle nechci</string>
+    <string name="classification_unwanted_summary">Nechci to, prosím, odstraňte to.\n(Lze znovu povolit v nastavení)</string>
+    <string name="restore">Obnovit</string>
+    <string name="encrypted">Šifrováno</string>
     <string name="date_format_settings">Formát datumu</string>
     <string name="date_header">Formáty datumu</string>
     <string name="date_header_summary">Nastavit vlastní formát datumu</string>
-    <string name="launch_on_library">Launch on Library</string>
-    <string name="categories">Categories</string>
-    <string name="classified_media">%1$s classified media</string>
-    <string name="scan_for_new_categories">Scan for new categories</string>
-    <string name="scanning_media">Scanning media...</string>
-    <string name="date_header_title">Date Header</string>
-    <string name="media_view">Media View</string>
-    <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
+    <string name="launch_on_library">Spustit na knihovně</string>
+    <string name="categories">Kategorie</string>
+    <string name="classified_media">%1$s klasifikovaných médií</string>
+    <string name="scan_for_new_categories">Skenovat nové kategorie</string>
+    <string name="scanning_media">Skenování médií...</string>
+    <string name="date_header_title">Hlavička data</string>
+    <string name="media_view">Zobrazení médií</string>
+    <string name="exif_date">Datum Exif</string>
+    <string name="media_info">Informace o médiu</string>
+    <string name="weekly_date">Týdenní datum</string>
+    <string name="media_grid">Mřížka médií</string>
+    <string name="classic_date">Klasické Datum</string>
+    <string name="extended_date">Rozšířené datum</string>
+    <string name="auto_play_video">Automatické přehrávání videa</string>
+    <string name="auto_play_video_summary">Automaticky přehrávaje video při prohlížení médií</string>
+    <string name="shared_elements">Animovat média</string>
     <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Zvýrazňovač</string>
+    <string name="type_marker">Označovač</string>
+    <string name="type_erase">Guma</string>
+    <string name="crop">Oříznout</string>
+    <string name="adjust">Upravit</string>
+    <string name="filters">Filtry</string>
+    <string name="markup">Kreslit</string>
+    <string name="type_size">Velikost</string>
+    <string name="encrypting_media">Šifrování médií...</string>
+    <string name="decrypt_vault">Dešifrování trezoru</string>
+    <string name="restore_vault_summary">Aktuální trezor a jeho obsah budou dešifrovány a obnoveny.\nDíky této akci bude váš obsah v galerii opět přístupný.</string>
+    <string name="restore_vault_title">Potvrdit dešifrování?</string>
+    <string name="yes">Ano</string>
+    <string name="vault_deletion_title">Potvrdit smazání?</string>
+    <string name="vault_deletion_summary">Aktuální trezor a jeho obsah budou trvale odstraněny.\nTuto akci nelze vrátit zpět.</string>
+    <string name="create_new_vault_title">Vytvořit nový trezor?</string>
+    <string name="create_new_vault_summary">Do trezoru se dostanete pomocí bezpečnostních opatření telefonu (heslo nebo biometrické údaje)\n\nŠifrovací klíč je přístupný uvnitř trezoru a slouží k obnovení všech trezorů.</string>
+    <string name="select_a_vault">Vyberte trezor</string>
     <plurals name="item_count">
         <item quantity="one">%s položka</item>
         <item quantity="few">%s položky</item>
