--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -287,22 +287,41 @@
     <string name="date_header">Formati Data</string>
     <string name="date_header_summary">Imposta i tuoi formati di data personalizzati</string>
     <string name="launch_on_library">Avvia nella Libreria</string>
-    <string name="categories">Categories</string>
-    <string name="classified_media">%1$s classified media</string>
-    <string name="scan_for_new_categories">Scan for new categories</string>
-    <string name="scanning_media">Scanning media...</string>
-    <string name="date_header_title">Date Header</string>
-    <string name="media_view">Media View</string>
-    <string name="exif_date">Exif Date</string>
-    <string name="media_info">Media Info</string>
-    <string name="weekly_date">Weekly Date</string>
-    <string name="media_grid">Media Grid</string>
-    <string name="classic_date">Classic Date</string>
-    <string name="extended_date">Extended Date</string>
-    <string name="auto_play_video">Video Auto-Play</string>
-    <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
-    <string name="shared_elements">Animate media items</string>
-    <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="categories">Categorie</string>
+    <string name="classified_media">%1$s Media classificati</string>
+    <string name="scan_for_new_categories">Scansiona per trovare nuove categorie</string>
+    <string name="scanning_media">Scansionando i media...</string>
+    <string name="date_header_title">Intestazione data</string>
+    <string name="media_view">Visuale Media</string>
+    <string name="exif_date">Exif data</string>
+    <string name="media_info">Informazioni media</string>
+    <string name="weekly_date">Data settimanale</string>
+    <string name="media_grid">Tabella dei Media</string>
+    <string name="classic_date">Data in formato tradizionale</string>
+    <string name="extended_date">Data in formato esteso</string>
+    <string name="auto_play_video">Auto riproduzione video</string>
+    <string name="auto_play_video_summary">Riproduci il video automaticamente durante la visione dei media</string>
+    <string name="shared_elements">Rendi gli elementi dei media animati</string>
+    <string name="shared_elements_summary">Anima gli elementi multimediali clicca/ritorna utilizzando transizioni di elementi condivisi</string>
+    <string name="type_stylus">Stilografica</string>
+    <string name="type_highlighter">Evidenziatore</string>
+    <string name="type_marker">Pennarello</string>
+    <string name="type_erase">Gomma</string>
+    <string name="crop">Taglia</string>
+    <string name="adjust">Aggiusta</string>
+    <string name="filters">Filtri</string>
+    <string name="markup">Marcare</string>
+    <string name="type_size">Dimensione</string>
+    <string name="encrypting_media">Codificazione dei media...</string>
+    <string name="decrypt_vault">Decodifica l\'archivio protetto</string>
+    <string name="restore_vault_summary">Il presente archivio protetto e il suo contenuto saranno decodificati e ripristinati.\nQuesta azione renderà i tuoi contenuti nuovamente accessibili nella Galleria.</string>
+    <string name="restore_vault_title">Confermi la decodifica?</string>
+    <string name="yes">Sì</string>
+    <string name="vault_deletion_title">Confermi la cancellazione?</string>
+    <string name="vault_deletion_summary">Il presente archivio e il suo contenuto saranno eliminati permanentemente.\nQuesta azione non è reversibile.</string>
+    <string name="create_new_vault_title">Vuoi creare un nuovo archivio?</string>
+    <string name="create_new_vault_summary">Sarà fatto l\'accesso all\'archivio usando le misure di sicurezza del tuo telefono (password o biometria)\n\nPuoi accedere alla chiave di codifica nell\'archivio e puoi usarla per ripristinare qualunque archivio.</string>
+    <string name="select_a_vault">Seleziona un archivio</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
