--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -191,12 +191,12 @@
     <string name="delete_vault">Șterge seiful</string>
     <string name="unknown_vault">Seif necunoscut</string>
     <string name="hide">Ascunde</string>
-    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
+    <string name="ignored_albums_text">Selectează ce albume ai dori să excluzi din Cronologie, din secțiunea de Albume sau amândouă.\n\nPoti selecta albume individuale sau poți crea un șablon cu metacaractere pentru a ascunde automat orice album se potrivește cu șablonul.</string>
     <string name="no_ignored_albums">Nu există albume ignorate</string>
     <string name="setup_ignored_albums">Configurare albume ignorate</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
+    <string name="individual_album_selection">Selecție de Albume Individuale</string>
+    <string name="wildcard_creator">Creator de Șablon</string>
+    <string name="wildcard_summary">Șablonul va fi folosit pentru a potrivi nume de albume sau căile lor.\nȘablonul poate fi tratat ca un șablon regex.</string>
     <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
     <string name="matched_albums">"Albume potrivite: %1$s"</string>
     <string name="go_back">Înapoi</string>
@@ -303,6 +303,25 @@
     <string name="auto_play_video_summary">Play the video automatically while viewing media</string>
     <string name="shared_elements">Animate media items</string>
     <string name="shared_elements_summary">Animate media items click/return using shared elements transitions</string>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Highlighter</string>
+    <string name="type_marker">Marker</string>
+    <string name="type_erase">Eraser</string>
+    <string name="crop">Crop</string>
+    <string name="adjust">Adjust</string>
+    <string name="filters">Filters</string>
+    <string name="markup">Markup</string>
+    <string name="type_size">Size</string>
+    <string name="encrypting_media">Encrypting media...</string>
+    <string name="decrypt_vault">Decrypt Vault</string>
+    <string name="restore_vault_summary">The current vault and its content will be decrypted and restored.\nThis action will make your content accessible again in the Gallery.</string>
+    <string name="restore_vault_title">Confirm Decryption?</string>
+    <string name="yes">Yes</string>
+    <string name="vault_deletion_title">Confirm Deletion?</string>
+    <string name="vault_deletion_summary">The current vault and its content will be deleted permanently.\nThis action cannot be undone.</string>
+    <string name="create_new_vault_title">Create new vault?</string>
+    <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="select_a_vault">Select a vault</string>
     <plurals name="item_count">
         <item quantity="one">%s articol</item>
         <item quantity="few">%s articole</item>
