--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -354,6 +354,7 @@
     <string name="show_date_header_summary">Show the media date in the media view top bar header.</string>
     <string name="show_selection_titles">Display Selection Item\'s Title</string>
     <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
+    <string name="extended_date_header_title">Extended Date Header</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
