SelectionSheet: Add select all addon
Currently disable the add button for addons as it is not implemented yet

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -355,6 +355,7 @@
     <string name="show_selection_titles">Display Selection Item\'s Title</string>
     <string name="show_selection_titles_summary">Display in the selection sheet a title for each action</string>
     <string name="extended_date_header_title">Extended Date Header</string>
+    <string name="clear_selection">Remove All</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
